--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
       {type:'input-weight', q:"Qual o seu peso atual? (em kg)", placeholder:"Ex.: 78"},
       {type:'body', q:"Agora escolha seu tipo de corpo (biotipo)", a: BODY_TYPES},
       {type:'radio', q:"Como é sua rotina durante a semana?", a:["Muito corrida","Relativamente organizada","Bastante flexível","Muito sedentária"]},
-      {type:'radio', q:"Qual frase te representa?", a:["Quero resultados rápidos","Prefiro algo sustentável","Quero comer bem e perder peso","Quero performance máxima"]}
+      {type:'radio', q:"Qual frase te representa?", a:["Quero resultados rápidos","Prefiro algo sustentável","Quero comer bem e perder peso","Quero performance máxima"]},
+      {type:'radio', q:"Nossa última pergunta pra finalizar! Você estaria disposto(a) a seguir um plano simples e feito sob medida para o seu corpo? ", a:["Sim, com certeza","Acho que sim","Preciso de ajuda para isso"]}
     ];
 
     var selected = new Array(QUESTIONS.length).fill(null);
