--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -176,7 +176,7 @@
             De <span class="text-red-500 line-through">R$ 149,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 4,90</span>
           </h4>
           <p class="mt-3 text-slate-700 text-sm leading-relaxed">
-            Você deve estar se perguntando.. porque tudo isso por somente R$ 19,90? ... verdade o valor está extremamente baixo, porem tem um motivo pra isso... <strong>somente uma vez no ano</strong> nós liberamos vagas com este preço simbólico, com intuito de ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguiam chegar ao seu objetivo! Sua oportunidade é agora! 
+            <strong>ATENÇÃO: Essa promoção é realizada somente uma vez no ano! Seu encerramento acontece ao final do cronometro acima ou após encerramento das vagas disponíveis! O que acontecer primeiro! Não nos responsabilizamos se no momento de sua compra as vagas tem se esgotado!</strong>  
           </p>
           <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Acesso Vitalício</div>
           <div id="mp-checkout" class="mt-6"></div>
