--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -217,9 +217,11 @@
 
 
 
+<!-- BOTÃO DE PAGAMENTO -->
+<a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">👉🏽 Comprar por R$ 4,90</a>
 
 
-
+  
 <!-- Prova Social - Prints WhatsApp -->
 <section class="py-12 bg-white">
   <div class="container mx-auto px-4 text-center">
