--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -218,8 +218,10 @@
 
 
 <!-- BOTÃO DE PAGAMENTO -->
-<a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">👉🏽 Comprar por R$ 4,90</a>
 
+    <div class="container mx-auto px-4 text-center">
+<a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">👉🏽 Comprar por R$ 4,90</a>
+    </div>
 
   
 <!-- Prova Social - Prints WhatsApp -->
