--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -177,7 +177,7 @@
           </h4>
    <p class="mt-3 text-slate-700 text-sm leading-relaxed">
   🔥 <strong>ATENÇÃO MÁXIMA!</strong><br>
-  ⏳ Esta promoção acontece <strong>APENAS UMA VEZ NO ANO</strong> e pode se encerrar <strong>a qualquer momento</strong>.<br>
+  ⏳ Esta promoção acontece <strong>APENAS UMA VEZ NO ANO</strong>.<br>
   O acesso será finalizado <strong>assim que o cronômetro zerar</strong> <strong>OU</strong> quando as 
   <strong>vagas restantes se esgotarem! O que acontecer primeiro!</strong>…<br>
   ⚠️ <strong>Não nos responsabilizamos caso, no momento da sua compra, as vagas já tenham acabado.</strong><br>
