--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -181,8 +181,8 @@
      
  <span id="vagasTexto" class="text-amber-600 text-sm uppercase font-semibold block mb-1">
             🔥 Restam <span id="vagasNumero">32</span> Vagas de 510 disponibilizadas
-          </span>
-     
+          </span><br>
+  
   ⚠️ <strong>Não nos responsabilizamos caso, no momento da sua compra, as vagas já tenham acabado.</strong><br>
 </p>
           <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Acesso Vitalício</div>
