--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -177,11 +177,11 @@
   🔥 <strong>ATENÇÃO MÁXIMA!</strong><br>
   ⏳ Esta promoção acontece <strong>APENAS UMA VEZ NO ANO</strong>.<br>
   O acesso será finalizado <strong>assim que o cronômetro zerar</strong> <strong>OU</strong> quando as 
-  <strong>vagas restantes se esgotarem! O que acontecer primeiro!</strong>…<br><br>
+  <strong>vagas restantes se esgotarem! O que acontecer primeiro!</strong>…<br><hr>
      
  <span id="vagasTexto" class="text-amber-600 text-sm uppercase font-semibold block mb-1">
             🔥 Restam <span id="vagasNumero">32</span> Vagas de 510 disponibilizadas
-          </span><br><br>
+          </span><br><hr>
   
   ⚠️ <strong>Não nos responsabilizamos caso, no momento da sua compra, as vagas já tenham acabado.</strong><br>
 </p>
