--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -177,14 +177,17 @@
   🔥 <strong>ATENÇÃO MÁXIMA!</strong><br>
   ⏳ Esta promoção acontece <strong>APENAS UMA VEZ NO ANO</strong>.<br>
   O acesso será finalizado <strong>assim que o cronômetro zerar</strong> <strong>OU</strong> quando as 
-  <strong>vagas restantes se esgotarem! O que acontecer primeiro!</strong>…<br><hr>
+  <strong>vagas restantes se esgotarem! O que acontecer primeiro!</strong>…<br>
      
- <span id="vagasTexto" class="text-amber-600 text-sm uppercase font-semibold block mb-1">
+     <hr>     
+             <span id="vagasTexto" class="text-amber-600 text-sm uppercase font-semibold block mb-1">
             🔥 Restam <span id="vagasNumero">32</span> Vagas de 510 disponibilizadas
-          </span><br><hr>
-  
-  ⚠️ <strong>Não nos responsabilizamos caso, no momento da sua compra, as vagas já tenham acabado.</strong><br>
-</p>
+            </span>
+     <hr>
+     
+    ⚠️ <strong>Não nos responsabilizamos caso, no momento da sua compra, as vagas já tenham acabado.</strong><br>
+
+      </p>
           <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Acesso Vitalício</div>
           <div id="mp-checkout" class="mt-6"></div>
           <a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">👉🏽 Comprar por R$ 4,90</a>
