--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <div class="h-2 rounded-full bg-slate-200 overflow-hidden" aria-hidden="true">
               <div id="progress" class="h-2 bg-[var(--brand)] w-0"></div>
             </div>
-       <!--     <p class="text-xs text-slate-500 mt-1">
+           <p class="text-xs text-slate-500 mt-1">
               <span id="progressCount">0/20</span> • <span id="pct">0%</span>
             </p>
-            -->
+            
           </div>
         </div>
 
