--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+
+    #progress, #progressCount, #pct {
+    display: none !important;
+   }
+
+  .progress-box-hidden {
+   display: none !important;
+  }
+
+    
     :root { --brand: #22c55e; }
     body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif; }
     .container { max-width: 980px; }
@@ -111,7 +121,7 @@
             <h2 class="text-2xl font-extrabold">Responda às perguntas</h2>
             <p id="microcopy" class="text-slate-600 text-sm mt-1">Começamos entendendo sua rotina. Dica: responda com sinceridade 😉</p>
           </div>
-      <!--    <div class="w-52 text-right">
+         <div class="w-52 text-right">
             <div class="h-2 rounded-full bg-slate-200 overflow-hidden" aria-hidden="true">
               <div id="progress" class="h-2 bg-[var(--brand)] w-0"></div>
             </div>
@@ -119,7 +129,7 @@
               <span id="progressCount">0/20</span> • <span id="pct">0%</span>
             </p>
             
-          </div> -->
+          </div> 
         </div>
 
         <form id="quizForm" class="grid gap-6"><noscript>Ative o JavaScript para visualizar as perguntas do quiz.</noscript></form>
