--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-center">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra agora qual a dieta que realmente funciona com seu corpo em 1 minuto!</h1>
-        <p class="mt-4 text-lg text-slate-600">Tenha sua Dieta 100% Personalizada: Inteligente, Feita pro SEU Corpo – Resultados Reais, Sem Promessas Falsas! Obtenha resultados com método que já mudou a vida de milhares de pessoas!</p>
+        <p class="mt-4 text-lg text-slate-600">Tenha sua Dieta 100% Personalizada: Inteligente, Feita pro seu Corpo! Obtenha resultados com método que já mudou a vida de milhares de pessoas!</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
           <span class="text-slate-500 self-center">Leva apenas 1 minuto</span>
