--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <div class="relative">
         <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
-          <img src="https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=1600&auto=format&fit=crop" alt="Comida saudável" class="w-full h-72 object-cover"/>
+          <img src="https://dietapronta.online/img/nutri-foto.jpg" alt="Comida saudável" class="w-full h-72 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-bold">Resultado personalizado</h3>
             <p class="mt-1 text-slate-600">Direcionamento claro combinando <strong>biotipo</strong>, <strong>IMC</strong> e <strong>perfil</strong> — para uma estratégia realmente executável.</p>
