--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -110,7 +110,7 @@
       </div>
       <div class="relative">
         <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
-          <img src="https://dietapronta.online/foto-nutri.jpg" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> 
+          <img src="https://dietapronta.online/nutri-foto.jpg" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> 
           <div class="p-6">
             <h3 class="text-xl font-bold">Plano realmente aplicável</h3>
             <p class="mt-1 text-slate-600">
