--- a/index.html
+++ b/index.html
@@ -348,102 +348,60 @@
       return MICROCOPY[k] || MICROCOPY[0];
     }
 
-   function renderQuestions(){
-  var html="";
-  for(var i=0;i<QUESTIONS.length;i++){
-    var it = QUESTIONS[i];
-    html += '<fieldset data-step="'+i+'" class="step'+(i===0?'':' hidden')+'">';
-    html += '<legend>'+(i+1)+'. '+ it.q +'</legend>';
-
-    /* === PERGUNTAS TIPO RADIO === */
-    if(it.type==='radio'){
-      html += '<div class="mt-3 grid sm:grid-cols-2 gap-3">';
-      for(var j=0;j<it.a.length;j++){
-        var letter=String.fromCharCode(65+j);
-        var id="q"+i+"_"+letter;
-        html += '<div class="choice">';
-        html += '<input class="peer hidden" type="radio" id="'+id+'" name="q'+i+'" value="'+letter+'" required />';
-        html += '<label for="'+id+'" class="block text-[1.05rem]">'+ it.a[j] +'</label>';
-        html += '</div>';
+    function renderQuestions(){
+      var html="";
+      for(var i=0;i<QUESTIONS.length;i++){
+        var it = QUESTIONS[i];
+        html += '<fieldset data-step="'+i+'" class="step'+(i===0?'':' hidden')+'">';
+        html += '<legend>'+(i+1)+'. '+ it.q +'</legend>';
+        if(it.type==='radio'){
+          html += '<div class="mt-3 grid sm:grid-cols-2 gap-3">';
+          for(var j=0;j<it.a.length;j++){
+            var letter=String.fromCharCode(65+j);
+            var id="q"+i+"_"+letter;
+            html += '<div class="choice">';
+            html += '<input class="peer hidden" type="radio" id="'+id+'" name="q'+i+'" value="'+letter+'" required />';
+            html += '<label for="'+id+'" class="block text-[1.05rem]">'+ it.a[j] +'</label>';
+            html += '</div>';
+          }
+          html += '</div>';
+        } else if(it.type==='input-height'){
+          var v = heightCm!=null? String(heightCm):'';
+          html += '<div class="mt-2">';
+          html += '<input id="heightCm" type="number" min="120" max="230" step="1" value="'+v+'" placeholder="'+(it.placeholder||'Ex.: 170')+'" class="rounded-xl border-slate-300 w-full p-3" />';
+          html += '<p class="text-xs text-slate-600 mt-2">Use centímetros. Ex.: 173</p>';
+          html += '</div>';
+        } else if(it.type==='input-weight'){
+          var wv = weightKg!=null? String(weightKg):'';
+          html += '<div class="mt-2">';
+          html += '<input id="weightKg" type="number" min="35" max="250" step="0.1" value="'+wv+'" placeholder="'+(it.placeholder||'Ex.: 78')+'" class="rounded-xl border-slate-300 w-full p-3" />';
+          html += '<p class="text-xs text-slate-600 mt-2">Use quilogramas. Ex.: 78.5</p>';
+          html += '</div>';
+        } else if(it.type==='body'){
+          html += '<div class="mt-3 grid sm:grid-cols-2 md:grid-cols-4 gap-3">';
+          for(var b=0;b<BODY_TYPES.length;b++){
+            var bt = BODY_TYPES[b];
+            var sel = (bodyTypeKey===bt.key)? ' selected':'';
+            html += '<div class="body-card'+sel+'" data-body="'+bt.key+'">'+bt.svg+'<div class="mt-2 font-semibold">'+bt.name+'</div></div>';
+          }
+          html += '</div>';
+        }
+        html += '</fieldset>';
       }
-      html += '</div>';
-    }
+      form.innerHTML = html;
 
-    /* === PERGUNTA DE ALTURA === */
-} else if(it.type==='input-height'){
-  var v = heightCm != null ? String(heightCm) : '';
-  html += `
-    <div class="mt-2">
-      <input id="heightCm" type="number" min="120" max="230" step="1"
-        value="${v}"
-        placeholder="${it.placeholder || 'Ex.: 170'}"
-        class="rounded-xl border-slate-300 w-full p-3" />
-
-      <p class="text-xs text-slate-600 mt-2">Use centímetros. Ex.: 173</p>
-
-      <button type="button"
-        class="btn-next mt-4"
-        onclick="validarAltura()">
-        Próximo
-      </button>
-    </div>
-  `;
-}
-
-    /* === PERGUNTA DE PESO === */
-  } else if(it.type==='input-weight'){
-  var wv = weightKg != null ? String(weightKg) : '';
-  html += `
-    <div class="mt-2">
-      <input id="weightKg" type="number" min="35" max="250" step="0.1"
-        value="${wv}"
-        placeholder="${it.placeholder || 'Ex.: 78'}"
-        class="rounded-xl border-slate-300 w-full p-3" />
-
-      <p class="text-xs text-slate-600 mt-2">Use quilogramas. Ex.: 78.5</p>
-
-      <button type="button"
-        class="btn-next mt-4"
-        onclick="validarPeso()">
-        Próximo
-      </button>
-    </div>
-  `;
-}
-
-
-    /* === CARDS DE BIOTIPO === */
-    else if(it.type==='body'){
-      html += '<div class="mt-3 grid sm:grid-cols-2 md:grid-cols-4 gap-3">';
-      for(var b=0;b<BODY_TYPES.length;b++){
-        var bt = BODY_TYPES[b];
-        var sel = (bodyTypeKey===bt.key)? ' selected':'';
-        html += '<div class="body-card'+sel+'" data-body="'+bt.key+'">'+bt.svg+'<div class="mt-2 font-semibold">'+bt.name+'</div></div>';
+      for(var i=0;i<selected.length;i++){
+        var v = selected[i]; if(!v) continue;
+        var input = document.getElementById('q'+i+'_'+v);
+        if(input) input.checked = true;
       }
-      html += '</div>';
-    }
-
-    html += '</fieldset>';
-  }
-
-  form.innerHTML = html;
-
-  /* Mantém seleções anteriores */
-  for(var i=0;i<selected.length;i++){
-    var v = selected[i]; 
-    if(!v) continue;
-    var input = document.getElementById('q'+i+'_'+v);
-    if(input) input.checked = true;
-  }
-  if(heightCm!=null){ var h=$('heightCm'); if(h){ h.value = String(heightCm); } }
-  if(weightKg!=null){ var w=$('weightKg'); if(w){ w.value = String(weightKg); } }
-  if(bodyTypeKey){
-    var cards = form.querySelectorAll('.body-card');
-    cards.forEach(function(c){ if(c.getAttribute('data-body')===bodyTypeKey) c.classList.add('selected'); });
-  }
-
-  updateProgress();
-
+      if(heightCm!=null){ var h=$('heightCm'); if(h){ h.value = String(heightCm); } }
+      if(weightKg!=null){ var w=$('weightKg'); if(w){ w.value = String(weightKg); } }
+      if(bodyTypeKey){
+        var cards = form.querySelectorAll('.body-card');
+        cards.forEach(function(c){ if(c.getAttribute('data-body')===bodyTypeKey) c.classList.add('selected'); });
+      }
+      updateProgress();
     }
 
     function recomputeScores(){
@@ -710,34 +668,6 @@
       showImcChip();
     }
   })();
-
-
-window.validarAltura = function () {
-  var h = parseInt(document.getElementById("heightCm").value);
-  if (!h || h < 120 || h > 230) {
-    alert("Por favor, informe uma altura válida entre 120 e 230 cm.");
-    return;
-  }
-
-  heightCm = h;
-  imcCompute();
-  saveProgress();
-  nextStep();
-};
-
-window.validarPeso = function () {
-  var w = parseFloat(document.getElementById("weightKg").value);
-  if (!w || w < 35 || w > 250) {
-    alert("Por favor, informe um peso válido entre 35 e 250 kg.");
-    return;
-  }
-
-  weightKg = w;
-  imcCompute();
-  saveProgress();
-  nextStep();
-};
-
   </script>
 </body>
 </html>
