--- a/index.html
+++ b/index.html
@@ -48,23 +48,25 @@
 /* Caixa da pergunta */
 fieldset.step {
   position: relative;
-  background: #ffffff;
-  border-radius: 22px;
-  padding: 30px 22px 26px 22px;
-  border: 1px solid #e2e8f0;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.06);
-  transition: transform .18s ease, box-shadow .18s ease;
+  backdrop-filter: blur(12px);
+  background: rgba(255, 255, 255, 0.45);
+  border-radius: 20px;
+  padding: 28px 20px 20px;
+  border: 1px solid rgba(255,255,255,0.4);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+  transition: transform .2s ease, box-shadow .2s ease;
 }
 fieldset.step:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 10px 28px rgba(0,0,0,0.10);
+  transform: scale(1.01);
+  box-shadow: 0 14px 40px rgba(0,0,0,0.16);
 }
 fieldset.step legend {
-  font-size: 1.3rem;
+  font-size: 1.25rem;
   font-weight: 800;
   color: #0f172a;
-  margin-bottom: 14px;
+  margin-bottom: 10px;
 }
+
 
 /* Opções */
 .choice label {
