--- a/index.html
+++ b/index.html
@@ -48,24 +48,25 @@
 /* Caixa da pergunta */
 fieldset.step {
   position: relative;
-  backdrop-filter: blur(12px);
-  background: rgba(255, 255, 255, 0.45);
+  background: linear-gradient(135deg, #e8f1ff, #d4e3ff);
   border-radius: 20px;
-  padding: 28px 20px 20px;
-  border: 1px solid rgba(255,255,255,0.4);
-  box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+  padding: 28px 20px 20px 20px;
+  border: 1px solid #b7cffc;
+  box-shadow: 0 8px 24px rgba(30, 64, 175, 0.18);
   transition: transform .2s ease, box-shadow .2s ease;
 }
 fieldset.step:hover {
   transform: scale(1.01);
-  box-shadow: 0 14px 40px rgba(0,0,0,0.16);
+  box-shadow: 0 10px 28px rgba(30, 58, 138, 0.25);
 }
 fieldset.step legend {
   font-size: 1.25rem;
   font-weight: 800;
-  color: #0f172a;
+  color: #1e3a8a;
   margin-bottom: 10px;
+  padding: 0 4px;
 }
+
 
 
 /* Opções */
