--- a/index.html
+++ b/index.html
@@ -48,24 +48,25 @@
 /* Caixa da pergunta */
 fieldset.step {
   position: relative;
-  background: linear-gradient(135deg, #e8f1ff, #d4e3ff);
+  background: linear-gradient(135deg, #f9fafb, #f3f4f6);
   border-radius: 20px;
   padding: 28px 20px 20px 20px;
-  border: 1px solid #b7cffc;
-  box-shadow: 0 8px 24px rgba(30, 64, 175, 0.18);
+  border: 1px solid #d1d5db;
+  box-shadow: 0 8px 24px rgba(15, 23, 42, 0.12);
   transition: transform .2s ease, box-shadow .2s ease;
 }
 fieldset.step:hover {
   transform: scale(1.01);
-  box-shadow: 0 10px 28px rgba(30, 58, 138, 0.25);
+  box-shadow: 0 14px 32px rgba(15, 23, 42, 0.16);
 }
 fieldset.step legend {
   font-size: 1.25rem;
   font-weight: 800;
-  color: #1e3a8a;
+  color: #334155;
   margin-bottom: 10px;
   padding: 0 4px;
 }
+
 
 
 
