--- a/index.html
+++ b/index.html
@@ -48,24 +48,25 @@
 /* Caixa da pergunta */
 fieldset.step {
   position: relative;
-  background: linear-gradient(135deg, #f9fafb, #f3f4f6);
+  backdrop-filter: blur(12px);
+  background: rgba(255, 255, 255, 0.45);
   border-radius: 20px;
-  padding: 28px 20px 20px 20px;
-  border: 1px solid #d1d5db;
-  box-shadow: 0 8px 24px rgba(15, 23, 42, 0.12);
+  padding: 28px 20px 20px;
+  border: 1px solid rgba(255,255,255,0.4);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.12);
   transition: transform .2s ease, box-shadow .2s ease;
 }
 fieldset.step:hover {
   transform: scale(1.01);
-  box-shadow: 0 14px 32px rgba(15, 23, 42, 0.16);
+  box-shadow: 0 14px 40px rgba(0,0,0,0.16);
 }
 fieldset.step legend {
   font-size: 1.25rem;
   font-weight: 800;
-  color: #334155;
+  color: #0f172a;
   margin-bottom: 10px;
-  padding: 0 4px;
 }
+
 
 
 
