--- a/index.html
+++ b/index.html
@@ -49,29 +49,25 @@
 /* Box das perguntas — Laranja Claro Premium */
 fieldset.step {
   position: relative;
-  background: linear-gradient(135deg, #FFECD2, #FDE4B8); /* laranja leve */
+  background: linear-gradient(135deg, #e8f1ff, #d4e3ff); /* cor do fundo */
   border-radius: 20px;
   padding: 28px 20px 20px 20px;
-  border: 1px solid #FBC98C; /* borda suave */
-  
-  /* sombra suave moderna */
-  box-shadow: 0 8px 24px rgba(249, 168, 38, 0.22);
-  
+  border: 1px solid #b7cffc;
+  box-shadow: 0 8px 24px rgba(30, 64, 175, 0.18);
   transition: transform .2s ease, box-shadow .2s ease;
 }
-
 fieldset.step:hover {
   transform: scale(1.01);
-  box-shadow: 0 12px 32px rgba(251, 146, 60, 0.26);
+  box-shadow: 0 10px 28px rgba(30, 58, 138, 0.25);
 }
-
 fieldset.step legend {
   font-size: 1.25rem;
   font-weight: 800;
-  color: #8A4B16; /* marrom queimado elegante */
+  color: #1e3a8a;
   margin-bottom: 10px;
   padding: 0 4px;
 }
+
 
 
 
